--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,6 @@ jobs:
         with:
           node-version: "21"
       - name: "Install dependencies"
-        run: npm ci
+        run: yarn install --frozen-lockfile
       - name: "Run tests"
-        run: npm test
+        run: yarn test
