--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "21"
+          cache: "yarn"
       - name: "Install dependencies"
         run: yarn install --frozen-lockfile
       - name: "Run tests"
