--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           node-version: "21"
           cache: "yarn"
+          always-auth: true
       - name: "Install dependencies"
         run: yarn install --frozen-lockfile
       - name: "Build package"
