test(api): add test case to detect wrong api key

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "generate": "openapi-ts",
-    "postinstall": "build",
+    "postinstall": "yarn build",
     "build": "tsc",
     "test": "vitest",
     "coverage": "vitest --coverage",
