--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,7 @@
     "target": "es6",
     "module": "commonjs",
     "declaration": true,
-    "outDir": "dist",
-    "strict": true
-  },
-  "include": ["src"]
+    "strict": true,
+    "skipLibCheck": true
+  }
 }
