--- a/.github/workflows/test-dashboard.yml
+++ b/.github/workflows/test-dashboard.yml
@@ -13,6 +13,8 @@ jobs:
           node-version: "21"
           cache: "yarn"
       - name: "Install dependencies"
+        working-directory: "dashboard-node"
         run: yarn install --frozen-lockfile
       - name: "Run tests"
+        working-directory: "dashboard-node"
         run: yarn test
