--- a/.github/workflows/release-dashboard.yml
+++ b/.github/workflows/release-dashboard.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "Checkout repository"
-        uses: actions/checkout@4
+        uses: actions/checkout@v4
       - name: "Setup node"
         uses: actions/setup-node@v4
         with:
