fix(actions): fix secrets

--- a/.github/workflows/release-procurat.yml
+++ b/.github/workflows/release-procurat.yml
@@ -26,5 +26,5 @@ jobs:
         working-directory: "procurat-node"
         run: npx semantic-release
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
