--- a/procurat-node/package.json
+++ b/procurat-node/package.json
@@ -7,7 +7,7 @@
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/triargos/sdks",
+  "repository": "https://github.com/triargos/sdks.git",
   "author": "Triargos GmbH <entwicklung@triargos.de>",
   "license": "MIT",
   "type": "module",
