--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,9 @@ jobs:
         with:
           node-version: "21"
           cache: "yarn"
+
+      - name: "Set yarn version"
+        run: yarn set version stable
       - name: "Install dependencies"
         run: yarn install --frozen-lockfile
       - name: "Build package"
