--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,12 +10,13 @@ jobs:
     steps:
       - name: "Checkout repository"
         uses: actions/checkout@v4
+      - name: "Enable corepack"
+        run: corepack enable
       - name: "Setup node"
         uses: actions/setup-node@v4
         with:
           node-version: "21"
           cache: "yarn"
-
       - name: "Set yarn version"
         run: yarn set version stable
       - name: "Install dependencies"
