--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   ],
   "scripts": {
     "build": "yarn workspaces foreach -A run build",
+    "test": "yarn workspaces foreach -A run test",
     "release": "multi-semantic-release"
   },
   "devDependencies": {
