feat(release): release initial version

--- a/packages/procurat-node/package.json
+++ b/packages/procurat-node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@triargos/procurat-node",
-  "version": "0.0.0",
+  "version": "0.0.0-semantic-release",
   "description": "A nodejs SDK for the Procurat api",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
