--- a/packages/dashboard-node/package.json
+++ b/packages/dashboard-node/package.json
@@ -11,8 +11,7 @@
   "author": "Triargos GmbH <entwicklung@triargos.de>",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.8",
-    "zod": "^3.22.4"
+    "axios": "^1.6.8"
   },
   "scripts": {
     "generate": "openapi-ts",
