breaking: remove hey-api from procurat

--- a/packages/procurat-node/package.json
+++ b/packages/procurat-node/package.json
@@ -15,7 +15,7 @@
     "zod": "^3.22.4"
   },
   "scripts": {
-    "generate": "openapi-ts",
+    "generate": "npx openapi-typescript ./openapi.json -o ./src/lib/api.d.ts",
     "build": "tsc",
     "typecheck": "tsc --noEmit",
     "coverage": "vitest --coverage",
