--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "@qiwi/multi-semantic-release": "^7.1.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "semantic-release": "^23.1.1"
+    "openapi-typescript": "^7.3.0",
+    "semantic-release": "^23.1.1",
+    "typescript": "^5.5.4"
   },
-  "packageManager": "yarn@4.2.2"
+  "packageManager": "yarn@4.2.2",
+  "dependencies": {
+    "openapi-fetch": "^0.10.5"
+  }
 }
