--- a/packages/procurat-node/package.json
+++ b/packages/procurat-node/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.8",
+    "openapi-fetch": "^0.10.5",
     "zod": "^3.22.4"
   },
   "scripts": {
@@ -24,7 +25,8 @@
   "devDependencies": {
     "@hey-api/openapi-ts": "^0.46.2",
     "@types/node": "^20.12.4",
+    "openapi-typescript": "^7.3.0",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.5"
+    "typescript": "^5.5.4"
   }
 }
