--- a/packages/dashboard-node/package.json
+++ b/packages/dashboard-node/package.json
@@ -11,17 +11,17 @@
   "author": "Triargos GmbH <entwicklung@triargos.de>",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.8"
+    "axios": "^1.6.8",
+    "openapi-typescript": "^7.4.3"
   },
   "scripts": {
-    "generate": "openapi-ts",
+    "generate": "npx openapi-typescript ./openapi.json -o src/lib/api.ts",
     "build": "tsc",
     "test": "vitest",
     "coverage": "vitest --coverage",
     "format": "prettier --write .."
   },
   "devDependencies": {
-    "@hey-api/openapi-ts": "^0.51.0",
     "@types/node": "^20.12.4",
     "@vitest/coverage-v8": "^1.4.0",
     "msw": "^2.2.13",
