--- a/packages/dashboard-node/package.json
+++ b/packages/dashboard-node/package.json
@@ -11,7 +11,6 @@
   "author": "Triargos GmbH <entwicklung@triargos.de>",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.8",
     "openapi-typescript": "^7.4.3"
   },
   "scripts": {
@@ -23,10 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.12.4",
-    "@vitest/coverage-v8": "^1.4.0",
-    "msw": "^2.2.13",
     "prettier": "^3.2.5",
-    "typescript": "^5.5.4",
-    "vitest": "^1.4.0"
+    "typescript": "^5.5.4"
   }
 }
