--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "repository": "https://github.com/triargos/sdks.git",
   "author": "Triargos GmbH <entwicklung@triargos.de>",
   "license": "MIT",
-  "workspaces": [
-    "packages/*"
-  ],
   "scripts": {
-    "generate": "yarn workspaces foreach -A run generate",
-    "build": "yarn workspaces foreach -A run build",
-    "test": "yarn workspaces foreach -A run test",
-    "release": "multi-semantic-release"
+    "generate": "pnpm -r run generate",
+    "build": "pnpm -r run build",
+    "test": "pnpm -r run test",
+    "release": "multi-semantic-release",
+    "dashboard:generate": "pnpm --filter @triargos/dashboard-node run generate",
+    "dashboard:build": "pnpm --filter @triargos/dashboard-node run build",
+    "dashboard:test": "pnpm --filter @triargos/dashboard-node run test",
+    "procurat:generate": "pnpm --filter @triargos/procurat-node run generate",
+    "procurat:build": "pnpm --filter @triargos/procurat-node run build",
+    "procurat:test": "pnpm --filter @triargos/procurat-node run test"
   },
   "devDependencies": {
     "@qiwi/multi-semantic-release": "^7.1.1",
@@ -21,5 +24,5 @@
     "semantic-release": "^23.1.1",
     "typescript": "^5.5.4"
   },
-  "packageManager": "yarn@4.3.1"
+  "packageManager": "pnpm@9.0.0"
 }
