--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,21 +10,24 @@ jobs:
     steps:
       - name: "Checkout repository"
         uses: actions/checkout@v4
-      - name: "Enable corepack"
-        run: corepack enable
-      - name: "Setup node"
+
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v4
+        with:
+          run_install: false
+
+      - name: Use Node.js 20.x
         uses: actions/setup-node@v4
         with:
-          node-version: "21"
-          cache: "yarn"
-      - name: "Set yarn version"
-        run: yarn set version stable
-      - name: "Install dependencies"
-        run: yarn install
+          node-version: "20.x"
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install
       - name: "Build package"
-        run: yarn build
+        run: pnpm build
       - name: "Run semantic-release"
-        run: yarn release
+        run: pnpm release
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
