--- a/packages/procurat-node/package.json
+++ b/packages/procurat-node/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@triargos/procurat-node",
   "version": "0.0.0-semantic-release",
+  "private": false,
+  "type": "module",
   "description": "A nodejs SDK for the Procurat api",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
