--- a/packages/dashboard-node/package.json
+++ b/packages/dashboard-node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@triargos/dashboard-node",
-  "version": "1.0.0-semantic-release",
+  "version": "4.2.0",
   "private": true,
   "description": "A nodejs SDK for the dashboard api",
   "main": "./dist/index.js",
