--- a/packages/effect-procurat/package.json
+++ b/packages/effect-procurat/package.json
@@ -28,7 +28,7 @@
     "build": "pnpm run clean && tsup",
     "dev": "tsup --watch",
     "clean": "rm -rf dist",
-    "release": "pnpm build && changeset publish --dry-run",
+    "release": "pnpm build && changeset publish",
     "typecheck": "tsc --noEmit",
     "prepublishOnly": "pnpm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
