--- a/.github/workflows/release-effect-procurat.yml
+++ b/.github/workflows/release-effect-procurat.yml
@@ -8,7 +8,11 @@ on:
       - '.changeset/**'
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
-
+permissions:
+   id-token: write 
+   contents: read
+   
+   
 jobs:
   release:
     name: Release
