--- a/packages/effect-procurat/package.json
+++ b/packages/effect-procurat/package.json
@@ -2,6 +2,7 @@
   "name": "@triargos/effect-procurat",
   "version": "0.1.4",
   "description": "Effect-based Procurat SDK",
+  "repository": "https://github.com/triargos/sdks",
   "type": "module",
   "private": false,
   "main": "./dist/index.js",
